# mbed-RTML

./: .gitmodules  CMakeLists.txt  main.cpp  main_SD.cpp  main_TFLM.cpp  mbed_app.json  variant.cpp
tflm/examples/hello_world/: hello_world_test.cc
tflm/examples/hello_world/models/: hello_world_float_model_data.cc  hello_world_int8_model_data.cc
tflm/tensorflow/lite/micro/cortex_m_generic/: micro_time.cc
